--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,4 @@ android:
   before_install:
     - chmod +x gradlew
 
-  before_script:
-    - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
-
-  script: ./gradlew clean connectedAndroidTest
+  script: "./gradlew build"
