Created CallManager linked with Transition module, responsible for the activities call; Edited Database tomake images id unique (imageId); Created Details image module; Created Transition between adapter and image details activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.details.DetailsActivity"
+            android:configChanges="orientation|screenSize"/>
+
     </application>
 
 </manifest>
