Fixed bug with first load (check if the number of images shown are less than the limit and load more); Created details layout; Refactored hardcoded strings (passed to strings file); Included Crashlytics.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
             android:name=".ui.details.DetailsActivity"
             android:configChanges="orientation|screenSize"/>
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="ba5c840c3dcb3f0734c1922eae67b9846f4e0ee6" />
     </application>
 
 </manifest>
