--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: android
+jdk: openjdk7
 cache: false
 
 env:
   global:
-    - ADB_INSTALL_TIMEOUT=8
+    - ADB_INSTALL_TIMEOUT=20
 
 android:
   components:
@@ -34,4 +35,5 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew clean connectedAndroidTest
+script:
+    - ./gradlew connectedAndroidTest
