--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,17 @@ android:
     - android-23
     - extra-android-m2repository
     - extra-google-m2repository
-    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-23
 
 before_install:
   - chmod +x gradlew
 
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb wait-for-device
   - adb shell input keyevent 82 &
 
-script: ./gradlew clean connectedAndroidTest
+script:
+  - ./gradlew clean connectedAndroidTest
