--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+cache: false
 
 env:
   global:
@@ -10,25 +11,18 @@ android:
     - build-tools-23.0.2
     - android-23
     - extra-android-m2repository
-    - extra-google-m2repository
     - sys-img-armeabi-v7a-android-21
 
-before_install:
-  - chmod +x gradlew
+install:
+  # Ensure Gradle wrapper is executable, download wrapper and show version
+  - chmod +x ./gradlew; ls -l gradlew; ./gradlew wrapper -v
+  # Download and show android dependencies
+  # - ./gradlew androidDependencies
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
-  - adb wait-for-device
   - adb shell input keyevent 82 &
 
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-
-script:
-  - ./gradlew build connectedCheck
+script: ./gradlew build connectedCheck
