--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew build connectedCheck
+script: ./gradlew build connectedAndroidTest
