--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,28 +55,46 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
 
+    /* DATABASE (ORM) */
+
     compile 'de.greenrobot:greendao:2.1.0'
+
+    /* DEPENDENCY INJECTION */
 
     apt "com.google.dagger:dagger-compiler:2.0.1"
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'javax.annotation:jsr250-api:1.0'
 
+    /* REST CLIENT */
+
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
 
+    /* FUNCTIONAL */
+
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.16'
 
+    /* IMAGE CACHE */
+
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    /* ANIMATIONS */
+
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
+
+    /* CRASH REPORT */
+
     compile('com.crashlytics.sdk.android:crashlytics:2.5.3@aar') {
         transitive = true;
     }
+
+    /* INSTRUMENTATION TEST */
 
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
@@ -87,5 +105,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
         exclude module: 'recyclerview-v7'
     }
+
+    /* UNIT TEST */
+
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
 }
