--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,22 @@ android:
     - build-tools-23.0.2
     - android-23
     - extra-android-m2repository
-    - extra-google-m2repository
     - sys-img-armeabi-v7a-android-21
 
 before_install:
-  - chmod +x gradlew
+  # Disable services enabled by default
+  # http://docs.travis-ci.com/user/database-setup/#MySQL
+  - sudo /etc/init.d/mysql stop
+  - sudo /etc/init.d/postgresql stop
+  # The following did not work reliable
+  # - sudo service mysql stop
+  # - sudo service postgresql stop
+
+install:
+  # Ensure Gradle wrapper is executable, download wrapper and show version
+  - chmod +x ./gradlew; ls -l gradlew; ./gradlew wrapper -v
+  # Download and show android dependencies
+  # - ./gradlew androidDependencies
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
@@ -23,4 +34,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew clean connectedAndroidTest
+script: ./gradlew build connectedCheck
