--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,10 @@ android {
     lintOptions {
         abortOnError false
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
