Refactor (MainPresenter, MainActivity, DetailsPresenter, DetailsActivity, ShutterPresenter); Updated error message; Handling Crashes with crashlytics.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - chmod +x ./gradlew; ls -l gradlew; ./gradlew wrapper -v
   # Download and show android dependencies
   # - ./gradlew androidDependencies
+  - travis_wait mvn install
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
