--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ install:
   - chmod +x ./gradlew; ls -l gradlew; ./gradlew wrapper -v
   # Download and show android dependencies
   # - ./gradlew androidDependencies
-  - travis_wait mvn install
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
@@ -26,4 +25,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew build connectedCheck
+script: ./gradlew connectedAndroidTest
