--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,14 @@ env:
 
 android:
   components:
-    - tools
     - build-tools-23.0.2
     - android-23
     - extra-android-m2repository
+    - extra-google-m2repository
     - sys-img-armeabi-v7a-android-21
 
-install:
-  # Ensure Gradle wrapper is executable, download wrapper and show version
-  - chmod +x ./gradlew; ls -l gradlew; ./gradlew wrapper -v
-  # Download and show android dependencies
-  # - ./gradlew androidDependencies
+before_install:
+  - chmod +x gradlew
 
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
@@ -25,4 +22,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew connectedAndroidTest
+script: ./gradlew clean connectedAndroidTest
