--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,13 @@ buildscript {
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
     jcenter()
 }
-
-apply plugin: 'com.android.databinding'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -51,7 +49,9 @@ android {
             task.enabled = false
         }
     }
-
+    dataBinding {
+        enabled = true
+    }
     lintOptions {
         abortOnError false
     }
